@startuml

class Person {
  - firstName : String
  - lastName : String
  - ID : String
  - title : String
  - YOB : int
}

class Worker {
  - hourlyPayRate : double
  + calculateWeeklyPay(hoursWorked : double) : double
  + displayWeeklyPay(hoursWorked : double) : void
  + toCSVDataString() : String
  + toXMLDataString() : String
  + toJSONDataString() : String
}

class SalaryWorker {
  - annualSalary : double
  + calculateWeeklyPay(hoursWorked : double) : double
  + displayWeeklyPay(hoursWorked : double) : void
  + toCSVDataString() : String
  + toXMLDataString() : String
  + toJSONDataString() : String
}

Worker --|> Person
SalaryWorker --|> Worker

@enduml